# cerberus

./: LICENSE  Makefile  cerberus-bmc.opam  cerberus-cheri.opam  cerberus-cheri.opam.template  cerberus-lib.opam  cerberus-web.opam  cerberus.opam  cn.opam  dune  dune-project
backend/: dune
backend/absint/src/: cfg.ml
backend/ail_playground/: main.ml
backend/bmc/: bmc.ml  bmc_common.ml  bmc_conc.ml  bmc_incremental.ml  bmc_sorts.ml  bmc_substitute.ml  bmc_utils.ml  dune  main.ml
backend/cn/lib/: dune
backend/common/: cerbcore.ml  driver_ocaml.ml  driver_ocaml.mli  pipeline.ml  pipeline.mli
backend/driver/: dune  main.ml
backend/ocaml/driver/: core_fvs.ml  pp_ocaml.ml
backend/web/: instance.ml
frontend/model/: README.md  cabs_to_ail.lem  cabs_to_ail_aux.lem  cabs_to_ail_effect.lem  core.lem  core_aux.lem  core_eval.lem  core_linking.lem  core_reduction.lem  core_rewrite.lem  core_run.lem  core_run_aux.lem  core_sequentialise.lem  core_typing.lem  core_typing_aux.lem  core_typing_effect.lem  debug.lem  defacto_memory.lem  desugaring_init.lem  driver.lem  errors.lem  exception.lem  formatted.lem  mini_pipeline.lem  pp.lem  state_exception.lem  state_exception_undefined.lem  translation.lem  translation_aux.lem
frontend/model/ail/: ailSyntax.lem  genTyping.lem
memory/: dune
memory/concrete/: Makefile-source  impl_mem.ml
memory/vip/: impl_mem.ml
ocaml_frontend/: build_lem.sh  core_aux.ml  core_aux.mli  core_remove_unused_functions.ml  core_rewrite.ml  core_rewrite.mli  core_unstruct.ml  core_unstruct.mli  desugaring_init.ml  desugaring_init.mli  dune  errors.ml  milicore.ml  milicore_label_inline.ml  switches.ml
ocaml_frontend/pprinters/: pp_ail.ml  pp_ail_ast.ml  pp_core.ml  pp_core.mli  pp_core_ast.ml  pp_errors.ml  pp_run.ml
ocaml_frontend/rewriters/: core_peval.ml  core_rewriter.ml  remove_unspecs.ml
parsers/c/: c_lexer.mll  c_parser.mly  c_parser_driver.ml  c_parser_driver.mli  c_parser_error.messages  dune  tokens.ml
parsers/core/: core_parser.mly  core_parser_driver.ml  dune
sibylfs/: sedi.sh
sibylfs/patch/: fs_spec.sed
sibylfs/src/: dir_heap.lem  dune  fs_dump.ml  fs_spec.lem
tools/: sedi.sh
util/: cerb_global.ml  cerb_global.mli
