(library
 (name bmc)
 (package cerberus-bmc)
 ; (public_name cerberus-bmc.bmc)
 (flags (:standard -w -27-69))
 (wrapped false)
 (modules :standard \ main)
 (c_library_flags -lstdc++)
 (libraries angstrom cerberus-lib.mem.concrete cerberus-lib.backend_common z3))

(executable
 (name main)
 (public_name cerberus-bmc)
 (package cerberus-bmc)
 (flags (:standard -w -27))
 (modules main)
 (libraries cmdliner str unix bmc))
