(executable
 (name main)
 (public_name cerberus)
 (package cerberus)
 (modules main)
 (libraries cmdliner str unix cerberus-lib.mem.concrete cerberus-lib.backend_common))

;(executable
; (name main_symbolic)
; (public_name cerberus-symbolic)
; (package cerberus)
; (modules main_symbolic)
; (libraries cmdliner str unix mem_symbolic cerberus-lib.backend_common))

(rule
 (target main_symbolic.ml)
 (deps main.ml)
 (action (copy main.ml main_symbolic.ml)))

(executable
 (name main_vip)
 (public_name cerberus-vip)
 (package cerberus)
 (modules main_vip)
 (libraries cmdliner str unix cerberus-lib.mem.vip cerberus-lib.backend_common))

(rule
 (target main_vip.ml)
 (deps main.ml)
 (action (copy main.ml main_vip.ml)))

(executable
 (name main_cheri_coq)
 (public_name cerberus-cheri)
 (package cerberus-cheri)
 (modules main_cheri_coq)
 (libraries cmdliner str unix cerberus-cheri.mem.cheri.coq cerberus-lib.backend_common)
 (instrumentation (backend landmarks))
)

(rule
 (target main_cheri_coq.ml)
 (package cerberus-cheri)
 (deps main.ml)
 (action (copy main.ml main_cheri_coq.ml)))
