(library
 (name core_parser)
 (public_name cerberus-lib.core_parser)
 (synopsis "Core parser")
 (flags (:standard -w -27-32-67))
 (modules :standard)
 (wrapped false)
 (libraries cerberus-lib.frontend))

(ocamllex core_lexer)
(menhir
 (flags (--external-tokens Core_parser_util))
 (modules core_parser))
